2004-09-14  Murray Cumming  <murrayc@murrayc.com>

	* press_release.sxw: Added quote from Jeff. Added made-up unapproved 
	quote for Nat. Updated number of supported languages.

2004-09-14  Murray Cumming  <murrayc@murrayc.com>

	* rnapplications.xml: Added evo stuff, based on email from JP Rosevear.

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-nautilus-context-menu.png: Epiphany is the default
	  Web Browser

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-insert-cd.png:
	* rndesktop.xml: If it's cool enough for Murray, it's cool enough for
	  me. Screenshots are now done.

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-nautilus-rendezvous.png:
	* rndesktop.xml: Added screenshot showing network with Rendezvous
	  shares

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-epiphany+preferences.png: Removed
	
	* figures/figure-epiphany+menu.png:
	* rnapplications.xml: Replace Epiphany picture as per suggestion of
	  murrayc

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-nautilus-context-menu.png:
	* figures/figure-nautilus-properties+add-application.png:
	* rndesktop.xml: MIME screenshots

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-clock+calendar.png:
	* figures/figure-evolution-mail.png: Evolution screenshots

	* rnapplets.xml:
	* rnapplications.xml: Set correct paths for figures

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-keyboard-layout+preview.png:
	* rncontrolcenter.xml: Keyboard layout screenshot

2004-09-14  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-gconf-editor-search.png:
	* figures/figure-glider-theme.png:
	* figures/figure-gnome-netstatus.png:
	* figures/figure-gnome-nettool.png: More new screenshots

	* rnapplets.xml:
	* rndesktop.xml:
	* rnsysadmin.xml: Set correct paths for figures, fix titles for
	  gnome-nettool

2004-09-14  Danilo Šegan  <dsegan@gmx.net>
