@@ -1,5 +1,9 @@
 2004-09-14  Murray Cumming  <murrayc@murrayc.com>
 
+	* rnapplications.xml: Mention evo-webcal feature.
+
+2004-09-14  Murray Cumming  <murrayc@murrayc.com>
+
 	* press_release.sxw: Added quote from Jeff. Added made-up unapproved 
 	quote for Nat. Updated number of supported languages.
 
